--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="splash_background">#F16553</color>
+    <color name="splash_background">#FF3700B3</color>
+    <color name="grayLight">#a0a0a0</color>
+    <color name="red">#ff0000</color>
+    <color name="transparent">#0fff</color>
+    <color name="default_text_color">#000000</color>
+    <color name="subtitle_text_color">#616161</color>
+    <color name="window_background">#ffffff</color>
+    <color name="card_view_background">#ffffff</color>
+    <color name="grey">#9e9e9e</color>
+
+    <color name="line_chart_text_color">#000000</color>
+    <color name="line_chart_color">#303f9f</color>
 </resources>
