--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,13 +2,9 @@
 <resources>
     <dimen name="default_start_margin">15dp</dimen>
     <dimen name="large_start_margin">20dp</dimen>
-    <dimen name="large_top_margin">15dp</dimen>
-    <dimen name="largest_top_margin">50dp</dimen>
     <dimen name="default_top_margin">5dp</dimen>
     <dimen name="default_bottom_margin">5dp</dimen>
-    <dimen name="large_bottom_margin">15dp</dimen>
     <dimen name="small_margin">2dp</dimen>
-    <dimen name="medium_margin">30dp</dimen>
 
     <dimen name="image_icon_size">24dp</dimen>
     <dimen name="cardview_radius">5dp</dimen>
@@ -17,8 +13,6 @@
     <dimen name="cardview_elevation">10dp</dimen>
     <dimen name="cardview_image_width">50dp</dimen>
     <dimen name="cardview_image_height">50dp</dimen>
-    <dimen name="normal_image_width">75dp</dimen>
-    <dimen name="normal_image_height">75dp</dimen>
 
     <dimen name="heading_text_size">26sp</dimen>
     <dimen name="heading2_text_size">22sp</dimen>
@@ -27,13 +21,5 @@
     <dimen name="toolbar_text_size">24sp</dimen>
 
     <dimen name="half_grid_size">4dp</dimen>
-    <dimen name="base_grid_size">8dp</dimen>
-    <dimen name="double_grid_size">16dp</dimen>
-    <dimen name="normal_image_view_size">40dp</dimen>
-    <dimen name="small_image_view_size">30dp</dimen>
-    <dimen name="card_elevation">8dp</dimen>
-    <dimen name="card_radius_normal">8dp</dimen>
-    <dimen name="card_radius_none">0dp</dimen>
-    <dimen name="mid_guide_start">160dp</dimen>
-    <dimen name="mid_guide_end">110dp</dimen>
+    <dimen name="splash_text_size">30dp</dimen>
 </resources>
