--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/cardview_margin"
     android:foreground="?android:attr/selectableItemBackground"
+    android:id="@+id/coinsItemCardView"
     android:clickable="true"
     app:cardCornerRadius="@dimen/cardview_radius"
     app:cardElevation="@dimen/cardview_elevation"
