--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,6 @@
     <color name="red">#ff0000</color>
     <color name="default_text_color">#000000</color>
     <color name="subtitle_text_color">#616161</color>
-    <color name="window_background">#ffffff</color>
+    <color name="window_background">#616161</color>
     <color name="card_view_background">#ffffff</color>
-
 </resources>
